--- a/p1_navigation/Report.ipynb
+++ b/p1_navigation/Report.ipynb
@@ -267,7 +267,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "import pdb"
+    "#import pdb"
    ]
   },
   {
@@ -658,6 +658,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Demonstration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -696,7 +703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Future Work"
+    "### 6. Future Work"
    ]
   },
   {
